Add component dependency tree API (#621)
* Add component dependency tree API


* Potential fix for pull request finding


* Potential fix for pull request finding


---------
